feat(web): implement epic 13 landing page and SEO

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PulseScore</title>
+    <title>PulseScore | Know Customer Health Before They Churn</title>
+    <meta
+      name="description"
+      content="Connect Stripe, HubSpot, and Intercom to monitor customer health and reduce churn with proactive alerts."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="PulseScore | Know Customer Health Before They Churn" />
+    <meta
+      property="og:description"
+      content="Connect Stripe, HubSpot, and Intercom to monitor customer health and reduce churn with proactive alerts."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og-card.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PulseScore | Know Customer Health Before They Churn" />
+    <meta
+      name="twitter:description"
+      content="Connect Stripe, HubSpot, and Intercom to monitor customer health and reduce churn with proactive alerts."
+    />
+    <meta name="twitter:image" content="/og-card.svg" />
     <script>
       (function () {
         var t = localStorage.getItem("theme");
